--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\kih09\Pictures\folder_purple.ico,0
+IconResource=C:\WINDOWS\System32\SHELL32.dll,4
 [ViewState]
 Mode=
 Vid=
